--- a/action.yml
+++ b/action.yml
@@ -45,7 +45,7 @@ runs:
       uses: actions/cache@v4
       with:
         key: ctcache-${{ inputs.key }}-${{ env.CTCACHE_NOW }}
-        path: ${{github.workspace}}/.ctcache
+        path: ${{env.CTCACHE_DIR}}
         restore-keys: ctcache-${{ github.job }}-
 
 branding:
